[tool.poetry]
name = "flax"
version = "0.1.11"
description = "flax tacit language"
authors = ["PyGamer0"]
license = "MIT"

[tool.poetry.scripts]
flax = "flax"

[tool.poetry.dependencies]
python = ">3.9"
mpmath = "*"
more_itertools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
