[tool.poetry]
name = "flax"
version = "1.0.1"
description = "flax tacit language"
authors = ["PyGamer0"]
license = "MIT"

[tool.poetry.scripts]
flax = "flax.main:main"

[tool.poetry.dependencies]
python = ">3.10"
mpmath = "*"
more_itertools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
